--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
+  display: flex;
+  flex-direction: column;
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  align-items: center;
 }
-
