--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,17 @@
   display: flex;
   flex-direction: column;
   max-width: 1280px;
+  min-width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
   text-align: center;
+}
+
+.action-area {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1rem;
+  justify-content: start;
   align-items: center;
 }
